--- a/.github/workflows/master_teste-appweb.yml
+++ b/.github/workflows/master_teste-appweb.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: '-c Release -o "C:\Program Files\dotnet\myapp"'
+        run: dotnet publish -c Release -o "C:\Program Files\dotnet\myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
