--- a/.github/workflows/master_sprint1-2semestre.yml
+++ b/.github/workflows/master_sprint1-2semestre.yml
@@ -1,44 +1,17 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy ASP.Net Core app to Azure Web App - teste-appweb
-
-on:
-  push:
-    branches:
-      - master
-  workflow_dispatch:
-
-jobs:
-  build:
-    runs-on: windows-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '6.0.x'
-
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+    run: dotnet build --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: '-c Release -o "C:\Program Files\dotnet\myapp"'
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
-
-  deploy:
-    runs-on: windows-latest
-    needs: build
+@@ -39,21 +39,21 @@ jobs:
     environment:
-      name: 'production'
+      name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    permissions:
+      id-token: write #This is required for requesting the JWT
     permissions:
       id-token: write #This is required for requesting the JWT
 
@@ -47,19 +20,24 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.__clientidsecretname__ }}
-          tenant-id: ${{ secrets.__tenantidsecretname__ }}
-          subscription-id: ${{ secrets.__subscriptionidsecretname__ }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_CE5156DE4D424286B93514BFA3C4881A }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3117C6A044FA4FE8A83C139BD2879F19 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F80A0BED88B640ADA34AA8754E03FF17 }}
+
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_CE5156DE4D424286B93514BFA3C4881A }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3117C6A044FA4FE8A83C139BD2879F19 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F80A0BED88B640ADA34AA8754E03FF17 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
+@@ -62,4 +62,4 @@ jobs:
           app-name: 'teste-appweb'
-          slot-name: 'production'
+          slot-name: 'Production'
           package: .
-          
